--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </div>
   </section>
 
-  <section class="explanation-section">
+  <section class="explanation-section fade-up">
     <div id="explanation">
       <h3>Cara Penyelesaiannya</h3>
       <p>Belum ada perhitungan. Silakan masukkan data pinjaman terlebih dahulu.</p>
