--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <section class="calculator-section">
-    <div class="Kalkulator">
+
+  <div class="judul">
+    <h1>Kalkulator Anuitas</h1>
+    <p>By: Farrel Satya Kurniawan Dan Henalvaro Farrel B.Q</p>
+  </div>
+
+  <section class="kalkulator-section">
+    <div class="kalkulator">
       <input id="display" readonly placeholder="Rp 0">
 
       <div class="input">
